--- a/ast-agr-cal/package.json
+++ b/ast-agr-cal/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.12.3",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.27",
