--- a/ast-agr-cal/package.json
+++ b/ast-agr-cal/package.json
@@ -2,22 +2,27 @@
   "name": "ast-agr-cal",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
-    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "dev": "vite",
+    "preview": "vite preview --port 5050",
+    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "pinia": "^2.0.13",
+    "roboto-fontface": "*",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.27",
+    "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
@@ -30,6 +35,8 @@
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vitest": "^0.9.3",
-    "vue-tsc": "^0.34.7"
+    "vue-cli-plugin-vuetify": "~2.5.0",
+    "vue-tsc": "^0.34.7",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
