aac: back to vue 3

--- a/ast-agr-cal/.gitignore
+++ b/ast-agr-cal/.gitignore
@@ -11,16 +11,16 @@ node_modules
 .DS_Store
 dist
 dist-ssr
+coverage
 *.local
 
 /cypress/videos/
 /cypress/screenshots/
 
 # Editor directories and files
-.vscode
+.vscode/*
 !.vscode/extensions.json
 .idea
-*.iml
 *.suo
 *.ntvs*
 *.njsproj
